--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ proj.linux/
 SheepFight/proj.win32/Debug.win32/
 SheepFight/proj.win32/SheepFight.VC.db
 SheepFight/proj.win32/ipch/
+SheepFight/proj.win32/.vs/
