--- a/SheepFight/proj.android/app/build.gradle
+++ b/SheepFight/proj.android/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion PROP_BUILD_TOOLS_VERSION
 
     defaultConfig {
-        applicationId "vnuk.edu.vn.sheepfight"
+        applicationId "com.gameloft.helloword"
         minSdkVersion PROP_MIN_SDK_VERSION
         targetSdkVersion PROP_TARGET_SDK_VERSION
         versionCode 1
