--- a/SheepFight/proj.win32/SheepFight.vcxproj
+++ b/SheepFight/proj.win32/SheepFight.vcxproj
@@ -149,32 +149,32 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
-    <ClCompile Include="..\Classes\Bullet.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\Model.cpp" />
-    <ClCompile Include="..\Classes\Rock.cpp" />
     <ClCompile Include="..\Classes\SceneAbout.cpp" />
     <ClCompile Include="..\Classes\SceneMenu.cpp" />
     <ClCompile Include="..\Classes\SceneNewGame.cpp" />
     <ClCompile Include="..\Classes\SceneOptions.cpp" />
     <ClCompile Include="..\Classes\Sheep.cpp" />
     <ClCompile Include="..\Classes\Space.cpp" />
+    <ClCompile Include="btnCreateSheep.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Queue.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
-    <ClInclude Include="..\Classes\Bullet.h" />
     <ClInclude Include="..\Classes\Defines.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\Model.h" />
-    <ClInclude Include="..\Classes\Rock.h" />
     <ClInclude Include="..\Classes\SceneAbout.h" />
     <ClInclude Include="..\Classes\SceneMenu.h" />
     <ClInclude Include="..\Classes\SceneNewGame.h" />
     <ClInclude Include="..\Classes\SceneOptions.h" />
     <ClInclude Include="..\Classes\Sheep.h" />
     <ClInclude Include="..\Classes\Space.h" />
+    <ClInclude Include="btnCreateSheep.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="Queue.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\cocos2d\cocos\2d\libcocos2d.vcxproj">
