--- a/SheepFight/proj.win32/SheepFight.vcxproj.filters
+++ b/SheepFight/proj.win32/SheepFight.vcxproj.filters
@@ -19,15 +19,15 @@
     <Filter Include="src\Sprites">
       <UniqueIdentifier>{6449cd55-fa38-4064-a069-368c023fa32a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Defines">
+      <UniqueIdentifier>{d6abf111-caee-4605-b434-e09a56980d78}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>win32</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\AppDelegate.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\HelloWorldScene.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\SceneAbout.cpp">
@@ -48,11 +48,8 @@
     <ClCompile Include="..\Classes\Sheep.cpp">
       <Filter>src\Sprites</Filter>
     </ClCompile>
-    <ClCompile Include="Queue.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="btnCreateSheep.cpp">
-      <Filter>src</Filter>
+    <ClCompile Include="..\Classes\Queue.cpp">
+      <Filter>src\Models</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -60,12 +57,6 @@
       <Filter>win32</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\AppDelegate.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\HelloWorldScene.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Defines.h">
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\SceneOptions.h">
@@ -86,11 +77,11 @@
     <ClInclude Include="..\Classes\Sheep.h">
       <Filter>src\Sprites</Filter>
     </ClInclude>
-    <ClInclude Include="Queue.h">
-      <Filter>src</Filter>
+    <ClInclude Include="..\Classes\Queue.h">
+      <Filter>src\Models</Filter>
     </ClInclude>
-    <ClInclude Include="btnCreateSheep.h">
-      <Filter>src</Filter>
+    <ClInclude Include="..\Classes\Defines.h">
+      <Filter>src\Defines</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
