--- a/SheepFight/proj.win32/SheepFight.vcxproj.filters
+++ b/SheepFight/proj.win32/SheepFight.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="..\Classes\Queue.cpp">
       <Filter>src\Models</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\GameOverScene.cpp">
+      <Filter>src\Scenes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -82,6 +85,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Sheep.h">
       <Filter>src\Sprites</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\GameOverScene.h">
+      <Filter>src\Scenes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
